#include $(top_srcdir)/build-aux/tophat.mk

#SUBDIRS = samtools

#AM_CXXFLAGS = -I$(top_srcdir)/src/SeqAn-1.2

# Generated with 
# find SeqAn-1.2 -type f -print | grep -v ".svn" | sed 's/$/ \\/g'
# run from src
EXTRA_DIST = \
SeqAn-1.2/COPYING \
SeqAn-1.2/COPYING.LESSER \
SeqAn-1.2/README \
SeqAn-1.2/seqan/align/align_algorithms.h \
SeqAn-1.2/seqan/align/align_base.h \
SeqAn-1.2/seqan/align/align_cols_base.h \
SeqAn-1.2/seqan/align/align_dynprog.h \
SeqAn-1.2/seqan/align/align_generated_forwards.h \
SeqAn-1.2/seqan/align/align_hirschberg.h \
SeqAn-1.2/seqan/align/align_iterator_base.h \
SeqAn-1.2/seqan/align/align_local_dynprog.h \
SeqAn-1.2/seqan/align/align_myers.h \
SeqAn-1.2/seqan/align/align_trace.h \
SeqAn-1.2/seqan/align/gaps_array.h \
SeqAn-1.2/seqan/align/gaps_base.h \
SeqAn-1.2/seqan/align/gaps_iterator_base.h \
SeqAn-1.2/seqan/align/gaps_simple.h \
SeqAn-1.2/seqan/align/gaps_sumlist.h \
SeqAn-1.2/seqan/align/hirschberg_set.h \
SeqAn-1.2/seqan/align/matrix_base.h \
SeqAn-1.2/seqan/align.h \
SeqAn-1.2/seqan/basic/basic_aggregates.h \
SeqAn-1.2/seqan/basic/basic_allocator_chunkpool.h \
SeqAn-1.2/seqan/basic/basic_allocator_interface.h \
SeqAn-1.2/seqan/basic/basic_allocator_multipool.h \
SeqAn-1.2/seqan/basic/basic_allocator_simple.h \
SeqAn-1.2/seqan/basic/basic_allocator_singlepool.h \
SeqAn-1.2/seqan/basic/basic_allocator_to_std.h \
SeqAn-1.2/seqan/basic/basic_alphabet_interface.h \
SeqAn-1.2/seqan/basic/basic_alphabet_interface2.h \
SeqAn-1.2/seqan/basic/basic_alphabet_simple.h \
SeqAn-1.2/seqan/basic/basic_alphabet_simple_tabs.h \
SeqAn-1.2/seqan/basic/basic_alphabet_trait_basic.h \
SeqAn-1.2/seqan/basic/basic_compare.h \
SeqAn-1.2/seqan/basic/basic_converter.h \
SeqAn-1.2/seqan/basic/basic_counted_ptr.h \
SeqAn-1.2/seqan/basic/basic_debug.h \
SeqAn-1.2/seqan/basic/basic_definition.h \
SeqAn-1.2/seqan/basic/basic_forwards.h \
SeqAn-1.2/seqan/basic/basic_generated_forwards.h \
SeqAn-1.2/seqan/basic/basic_holder.h \
SeqAn-1.2/seqan/basic/basic_holder_dynamic.h \
SeqAn-1.2/seqan/basic/basic_host.h \
SeqAn-1.2/seqan/basic/basic_iterator.h \
SeqAn-1.2/seqan/basic/basic_iterator_adapt_std.h \
SeqAn-1.2/seqan/basic/basic_iterator_adaptor.h \
SeqAn-1.2/seqan/basic/basic_iterator_base.h \
SeqAn-1.2/seqan/basic/basic_iterator_position.h \
SeqAn-1.2/seqan/basic/basic_iterator_simple.h \
SeqAn-1.2/seqan/basic/basic_logvalue.h \
SeqAn-1.2/seqan/basic/basic_metaprogramming.h \
SeqAn-1.2/seqan/basic/basic_operator.h \
SeqAn-1.2/seqan/basic/basic_pointer.h \
SeqAn-1.2/seqan/basic/basic_profchar.h \
SeqAn-1.2/seqan/basic/basic_profile.h \
SeqAn-1.2/seqan/basic/basic_proxy.h \
SeqAn-1.2/seqan/basic/basic_sse2.h \
SeqAn-1.2/seqan/basic/basic_tag.h \
SeqAn-1.2/seqan/basic/basic_transport.h \
SeqAn-1.2/seqan/basic/basic_type.h \
SeqAn-1.2/seqan/basic/basic_volatile_ptr.h \
SeqAn-1.2/seqan/basic.h \
SeqAn-1.2/seqan/blast/blast_base.h \
SeqAn-1.2/seqan/blast/blast_generated_forwards.h \
SeqAn-1.2/seqan/blast/blast_hit.h \
SeqAn-1.2/seqan/blast/blast_hit_iterator.h \
SeqAn-1.2/seqan/blast/blast_hsp.h \
SeqAn-1.2/seqan/blast/blast_hsp_iterator.h \
SeqAn-1.2/seqan/blast/blast_iterator.h \
SeqAn-1.2/seqan/blast/blast_parsing.h \
SeqAn-1.2/seqan/blast/blast_report.h \
SeqAn-1.2/seqan/blast/blast_run.h \
SeqAn-1.2/seqan/blast/blast_stream_hit.h \
SeqAn-1.2/seqan/blast/blast_stream_hit_iterator.h \
SeqAn-1.2/seqan/blast/blast_stream_hsp_iterator.h \
SeqAn-1.2/seqan/blast/blast_stream_report.h \
SeqAn-1.2/seqan/blast.h \
SeqAn-1.2/seqan/chaining/chain_base.h \
SeqAn-1.2/seqan/chaining/chain_generic.h \
SeqAn-1.2/seqan/chaining/chain_meta_fragment.h \
SeqAn-1.2/seqan/chaining/chain_point.h \
SeqAn-1.2/seqan/chaining/chain_wrapper_point.h \
SeqAn-1.2/seqan/chaining/chaining_generated_forwards.h \
SeqAn-1.2/seqan/chaining/fragment.h \
SeqAn-1.2/seqan/chaining/geom_distribution.h \
SeqAn-1.2/seqan/chaining/range_max_tree.h \
SeqAn-1.2/seqan/chaining/range_tree.h \
SeqAn-1.2/seqan/chaining/rmt_base.h \
SeqAn-1.2/seqan/chaining/rmt_common_algos.h \
SeqAn-1.2/seqan/chaining/rmt_compl_algos.h \
SeqAn-1.2/seqan/chaining/rmt_def_algos.h \
SeqAn-1.2/seqan/chaining/rmt_skip_base_element.h \
SeqAn-1.2/seqan/chaining/rmt_skip_element.h \
SeqAn-1.2/seqan/chaining/rt_base.h \
SeqAn-1.2/seqan/chaining/rt_common_algos.h \
SeqAn-1.2/seqan/chaining/rt_impl.h \
SeqAn-1.2/seqan/chaining/rt_skip_base_element.h \
SeqAn-1.2/seqan/chaining/rt_skip_element.h \
SeqAn-1.2/seqan/chaining/rt_sl_base.h \
SeqAn-1.2/seqan/chaining/rt_sl_compl_algos.h \
SeqAn-1.2/seqan/chaining/rt_sl_def_algos.h \
SeqAn-1.2/seqan/chaining/rt_sl_impl.h \
SeqAn-1.2/seqan/chaining/score_chain.h \
SeqAn-1.2/seqan/chaining/score_chain_sop.h \
SeqAn-1.2/seqan/chaining/score_manhattan.h \
SeqAn-1.2/seqan/chaining/score_zero.h \
SeqAn-1.2/seqan/chaining/skip_base_element.h \
SeqAn-1.2/seqan/chaining/skip_element.h \
SeqAn-1.2/seqan/chaining/skip_list.h \
SeqAn-1.2/seqan/chaining/skip_list_base.h \
SeqAn-1.2/seqan/chaining/skip_list_dynamic.h \
SeqAn-1.2/seqan/chaining/skip_list_impl.h \
SeqAn-1.2/seqan/chaining/skip_list_iterator.h \
SeqAn-1.2/seqan/chaining/skip_list_type.h \
SeqAn-1.2/seqan/chaining/skip_pool_alloc.h \
SeqAn-1.2/seqan/chaining/tree_chain.h \
SeqAn-1.2/seqan/chaining/tree_chain_sop.h \
SeqAn-1.2/seqan/chaining/tree_chain_utils.h \
SeqAn-1.2/seqan/chaining.h \
SeqAn-1.2/seqan/consensus/consensus_base.h \
SeqAn-1.2/seqan/consensus/consensus_generated_forwards.h \
SeqAn-1.2/seqan/consensus/consensus_library.h \
SeqAn-1.2/seqan/consensus/consensus_realign.h \
SeqAn-1.2/seqan/consensus/consensus_score.h \
SeqAn-1.2/seqan/consensus.h \
SeqAn-1.2/seqan/file/chunk_collector.h \
SeqAn-1.2/seqan/file/cstream.h \
SeqAn-1.2/seqan/file/file_array.h \
SeqAn-1.2/seqan/file/file_base.h \
SeqAn-1.2/seqan/file/file_cstyle.h \
SeqAn-1.2/seqan/file/file_filereader.h \
SeqAn-1.2/seqan/file/file_filereaderiterator.h \
SeqAn-1.2/seqan/file/file_format.h \
SeqAn-1.2/seqan/file/file_format_cgviz.h \
SeqAn-1.2/seqan/file/file_format_embl.h \
SeqAn-1.2/seqan/file/file_format_fasta.h \
SeqAn-1.2/seqan/file/file_format_fasta_align.h \
SeqAn-1.2/seqan/file/file_format_genbank.h \
SeqAn-1.2/seqan/file/file_format_guess.h \
SeqAn-1.2/seqan/file/file_format_mmap.h \
SeqAn-1.2/seqan/file/file_format_raw.h \
SeqAn-1.2/seqan/file/file_format_sam.h \
SeqAn-1.2/seqan/file/file_forwards.h \
SeqAn-1.2/seqan/file/file_generated_forwards.h \
SeqAn-1.2/seqan/file/file_page.h \
SeqAn-1.2/seqan/file/file_page_raid0.h \
SeqAn-1.2/seqan/file/meta.h \
SeqAn-1.2/seqan/file/stream.h \
SeqAn-1.2/seqan/file/stream_algorithms.h \
SeqAn-1.2/seqan/file/string_external.h \
SeqAn-1.2/seqan/file/string_mmap.h \
SeqAn-1.2/seqan/file.h \
SeqAn-1.2/seqan/find/find_abndm.h \
SeqAn-1.2/seqan/find/find_ahocorasick.h \
SeqAn-1.2/seqan/find/find_base.h \
SeqAn-1.2/seqan/find/find_begin.h \
SeqAn-1.2/seqan/find/find_bndm.h \
SeqAn-1.2/seqan/find/find_bom.h \
SeqAn-1.2/seqan/find/find_generated_forwards.h \
SeqAn-1.2/seqan/find/find_hamming_horspool.h \
SeqAn-1.2/seqan/find/find_horspool.h \
SeqAn-1.2/seqan/find/find_multi.h \
SeqAn-1.2/seqan/find/find_multiple_bfam.h \
SeqAn-1.2/seqan/find/find_multiple_shiftand.h \
SeqAn-1.2/seqan/find/find_myers_ukkonen.h \
SeqAn-1.2/seqan/find/find_pattern_base.h \
SeqAn-1.2/seqan/find/find_pex.h \
SeqAn-1.2/seqan/find/find_quasar.h \
SeqAn-1.2/seqan/find/find_score.h \
SeqAn-1.2/seqan/find/find_set_horspool.h \
SeqAn-1.2/seqan/find/find_shiftand.h \
SeqAn-1.2/seqan/find/find_shiftor.h \
SeqAn-1.2/seqan/find/find_simple.h \
SeqAn-1.2/seqan/find/find_swift.h \
SeqAn-1.2/seqan/find/find_wild_shiftand.h \
SeqAn-1.2/seqan/find/find_wumanber.h \
SeqAn-1.2/seqan/find.h \
SeqAn-1.2/seqan/find_motif/em_algorithm.h \
SeqAn-1.2/seqan/find_motif/find_motif_base.h \
SeqAn-1.2/seqan/find_motif/find_motif_epatternbranching.h \
SeqAn-1.2/seqan/find_motif/find_motif_generated_forwards.h \
SeqAn-1.2/seqan/find_motif/find_motif_pms1.h \
SeqAn-1.2/seqan/find_motif/find_motif_pmsp.h \
SeqAn-1.2/seqan/find_motif/find_motif_projection.h \
SeqAn-1.2/seqan/find_motif/frequency_distribution.h \
SeqAn-1.2/seqan/find_motif/profile.h \
SeqAn-1.2/seqan/find_motif/pseudocount_base.h \
SeqAn-1.2/seqan/find_motif/pseudocount_mode_c.h \
SeqAn-1.2/seqan/find_motif/pseudocount_mode_p.h \
SeqAn-1.2/seqan/find_motif/sequence_model_types.h \
SeqAn-1.2/seqan/find_motif.h \
SeqAn-1.2/seqan/graph_algorithms/graph_algorithm.h \
SeqAn-1.2/seqan/graph_algorithms/graph_algorithm_heap_tree.h \
SeqAn-1.2/seqan/graph_algorithms/graph_algorithm_hmm.h \
SeqAn-1.2/seqan/graph_algorithms/graph_algorithm_lis_his.h \
SeqAn-1.2/seqan/graph_algorithms/graph_algorithms_generated_forwards.h \
SeqAn-1.2/seqan/graph_algorithms.h \
SeqAn-1.2/seqan/graph_align/graph_align_banded_gotoh.h \
SeqAn-1.2/seqan/graph_align/graph_align_banded_needleman_wunsch.h \
SeqAn-1.2/seqan/graph_align/graph_align_base.h \
SeqAn-1.2/seqan/graph_align/graph_align_config.h \
SeqAn-1.2/seqan/graph_align/graph_align_generated_forwards.h \
SeqAn-1.2/seqan/graph_align/graph_align_gotoh.h \
SeqAn-1.2/seqan/graph_align/graph_align_hirschberg.h \
SeqAn-1.2/seqan/graph_align/graph_align_interface.h \
SeqAn-1.2/seqan/graph_align/graph_align_needleman_wunsch.h \
SeqAn-1.2/seqan/graph_align/graph_align_smith_waterman.h \
SeqAn-1.2/seqan/graph_align/graph_align_smith_waterman_clump.h \
SeqAn-1.2/seqan/graph_align.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_base.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_distance.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_guidetree.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_io.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_kmer.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_library.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_msa.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_progressive.h \
SeqAn-1.2/seqan/graph_msa/graph_align_tcoffee_refinement.h \
SeqAn-1.2/seqan/graph_msa/graph_msa_generated_forwards.h \
SeqAn-1.2/seqan/graph_msa.h \
SeqAn-1.2/seqan/graph_types/graph_base.h \
SeqAn-1.2/seqan/graph_types/graph_drawing.h \
SeqAn-1.2/seqan/graph_types/graph_edgestump.h \
SeqAn-1.2/seqan/graph_types/graph_idmanager.h \
SeqAn-1.2/seqan/graph_types/graph_impl_automaton.h \
SeqAn-1.2/seqan/graph_types/graph_impl_directed.h \
SeqAn-1.2/seqan/graph_types/graph_impl_fragment.h \
SeqAn-1.2/seqan/graph_types/graph_impl_hmm.h \
SeqAn-1.2/seqan/graph_types/graph_impl_oracle.h \
SeqAn-1.2/seqan/graph_types/graph_impl_tree.h \
SeqAn-1.2/seqan/graph_types/graph_impl_trie.h \
SeqAn-1.2/seqan/graph_types/graph_impl_undirected.h \
SeqAn-1.2/seqan/graph_types/graph_impl_wordgraph.h \
SeqAn-1.2/seqan/graph_types/graph_interface.h \
SeqAn-1.2/seqan/graph_types/graph_iterator.h \
SeqAn-1.2/seqan/graph_types/graph_iterator_adjacency.h \
SeqAn-1.2/seqan/graph_types/graph_iterator_bfs.h \
SeqAn-1.2/seqan/graph_types/graph_iterator_dfs.h \
SeqAn-1.2/seqan/graph_types/graph_iterator_edge.h \
SeqAn-1.2/seqan/graph_types/graph_iterator_outedge.h \
SeqAn-1.2/seqan/graph_types/graph_iterator_vertex.h \
SeqAn-1.2/seqan/graph_types/graph_property.h \
SeqAn-1.2/seqan/graph_types/graph_types_generated_forwards.h \
SeqAn-1.2/seqan/graph_types/graph_utility_parsing.h \
SeqAn-1.2/seqan/graph_types.h \
SeqAn-1.2/seqan/index/index_base.h \
SeqAn-1.2/seqan/index/index_bwt.h \
SeqAn-1.2/seqan/index/index_childtab.h \
SeqAn-1.2/seqan/index/index_dfi.h \
SeqAn-1.2/seqan/index/index_esa_algs.h \
SeqAn-1.2/seqan/index/index_esa_algs_multi.h \
SeqAn-1.2/seqan/index/index_esa_base.h \
SeqAn-1.2/seqan/index/index_esa_drawing.h \
SeqAn-1.2/seqan/index/index_esa_find.h \
SeqAn-1.2/seqan/index/index_esa_stree.h \
SeqAn-1.2/seqan/index/index_find.h \
SeqAn-1.2/seqan/index/index_generated_forwards.h \
SeqAn-1.2/seqan/index/index_lcp.h \
SeqAn-1.2/seqan/index/index_lcp_tree.h \
SeqAn-1.2/seqan/index/index_manual_forwards.h \
SeqAn-1.2/seqan/index/index_pizzachili.h \
SeqAn-1.2/seqan/index/index_pizzachili_find.h \
SeqAn-1.2/seqan/index/index_pizzachili_string.h \
SeqAn-1.2/seqan/index/index_qgram.h \
SeqAn-1.2/seqan/index/index_qgram_find.h \
SeqAn-1.2/seqan/index/index_sa_btree.h \
SeqAn-1.2/seqan/index/index_sa_lss.h \
SeqAn-1.2/seqan/index/index_sa_mm.h \
SeqAn-1.2/seqan/index/index_sa_qsort.h \
SeqAn-1.2/seqan/index/index_shawarma.h \
SeqAn-1.2/seqan/index/index_shims.h \
SeqAn-1.2/seqan/index/index_skew3.h \
SeqAn-1.2/seqan/index/index_skew7.h \
SeqAn-1.2/seqan/index/index_skew7_multi.h \
SeqAn-1.2/seqan/index/index_wotd.h \
SeqAn-1.2/seqan/index/pipe_merger3.h \
SeqAn-1.2/seqan/index/pipe_merger7.h \
SeqAn-1.2/seqan/index/pizzachili_api.h \
SeqAn-1.2/seqan/index/pump_extender3.h \
SeqAn-1.2/seqan/index/pump_extender7.h \
SeqAn-1.2/seqan/index/pump_lcp_core.h \
SeqAn-1.2/seqan/index/pump_separator7.h \
SeqAn-1.2/seqan/index/radix.h \
SeqAn-1.2/seqan/index/repeat_base.h \
SeqAn-1.2/seqan/index/shape_base.h \
SeqAn-1.2/seqan/index/shape_gapped.h \
SeqAn-1.2/seqan/index/shape_onegapped.h \
SeqAn-1.2/seqan/index/shape_predefined.h \
SeqAn-1.2/seqan/index.h \
SeqAn-1.2/seqan/map/map_adapter_stl.h \
SeqAn-1.2/seqan/map/map_base.h \
SeqAn-1.2/seqan/map/map_chooser.h \
SeqAn-1.2/seqan/map/map_generated_forwards.h \
SeqAn-1.2/seqan/map/map_skiplist.h \
SeqAn-1.2/seqan/map/map_vector.h \
SeqAn-1.2/seqan/map/sumlist.h \
SeqAn-1.2/seqan/map/sumlist_mini.h \
SeqAn-1.2/seqan/map/sumlist_skip.h \
SeqAn-1.2/seqan/map.h \
SeqAn-1.2/seqan/misc/edit_environment.h \
SeqAn-1.2/seqan/misc/misc_base.h \
SeqAn-1.2/seqan/misc/misc_cmdparser.h \
SeqAn-1.2/seqan/misc/misc_generated_forwards.h \
SeqAn-1.2/seqan/misc/misc_map.h \
SeqAn-1.2/seqan/misc/misc_parsing.h \
SeqAn-1.2/seqan/misc/misc_random.h \
SeqAn-1.2/seqan/misc/misc_set.h \
SeqAn-1.2/seqan/misc/priority_type_base.h \
SeqAn-1.2/seqan/misc/priority_type_heap.h \
SeqAn-1.2/seqan/modifier/modifier_alphabet.h \
SeqAn-1.2/seqan/modifier/modifier_alphabet_expansion.h \
SeqAn-1.2/seqan/modifier/modifier_functors.h \
SeqAn-1.2/seqan/modifier/modifier_generated_forwards.h \
SeqAn-1.2/seqan/modifier/modifier_iterator.h \
SeqAn-1.2/seqan/modifier/modifier_reverse.h \
SeqAn-1.2/seqan/modifier/modifier_shortcuts.h \
SeqAn-1.2/seqan/modifier/modifier_string.h \
SeqAn-1.2/seqan/modifier/modifier_view.h \
SeqAn-1.2/seqan/modifier.h \
SeqAn-1.2/seqan/pipe/pipe_base.h \
SeqAn-1.2/seqan/pipe/pipe_caster.h \
SeqAn-1.2/seqan/pipe/pipe_counter.h \
SeqAn-1.2/seqan/pipe/pipe_echoer.h \
SeqAn-1.2/seqan/pipe/pipe_edit_environment.h \
SeqAn-1.2/seqan/pipe/pipe_filter.h \
SeqAn-1.2/seqan/pipe/pipe_generated_forwards.h \
SeqAn-1.2/seqan/pipe/pipe_iterator.h \
SeqAn-1.2/seqan/pipe/pipe_joiner.h \
SeqAn-1.2/seqan/pipe/pipe_namer.h \
SeqAn-1.2/seqan/pipe/pipe_sampler.h \
SeqAn-1.2/seqan/pipe/pipe_shifter.h \
SeqAn-1.2/seqan/pipe/pipe_source.h \
SeqAn-1.2/seqan/pipe/pipe_tupler.h \
SeqAn-1.2/seqan/pipe/pool_base.h \
SeqAn-1.2/seqan/pipe/pool_mapper.h \
SeqAn-1.2/seqan/pipe/pool_sorter.h \
SeqAn-1.2/seqan/pipe.h \
SeqAn-1.2/seqan/platform/platform_gcc.h \
SeqAn-1.2/seqan/platform/platform_generated_forwards.h \
SeqAn-1.2/seqan/platform/platform_lisa.h \
SeqAn-1.2/seqan/platform/platform_mingw.h \
SeqAn-1.2/seqan/platform/platform_solaris.h \
SeqAn-1.2/seqan/platform/platform_windows.h \
SeqAn-1.2/seqan/platform.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_align.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_aligngraph.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_annotation.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_exact.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_exact_iterative.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_fragment.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_inexact.h \
SeqAn-1.2/seqan/refinement/graph_algorithm_refine_scoring.h \
SeqAn-1.2/seqan/refinement/graph_impl_align.h \
SeqAn-1.2/seqan/refinement/graph_impl_align_adapt.h \
SeqAn-1.2/seqan/refinement/graph_impl_interval_tree.h \
SeqAn-1.2/seqan/refinement/graph_impl_interval_types.h \
SeqAn-1.2/seqan/refinement/refinement_generated_forwards.h \
SeqAn-1.2/seqan/refinement.h \
SeqAn-1.2/seqan/score/score_base.h \
SeqAn-1.2/seqan/score/score_edit.h \
SeqAn-1.2/seqan/score/score_generated_forwards.h \
SeqAn-1.2/seqan/score/score_matrix.h \
SeqAn-1.2/seqan/score/score_matrix_data.h \
SeqAn-1.2/seqan/score/score_pam.h \
SeqAn-1.2/seqan/score/score_pam_matrix.h \
SeqAn-1.2/seqan/score/score_simple.h \
SeqAn-1.2/seqan/score.h \
SeqAn-1.2/seqan/seeds/banded_align.h \
SeqAn-1.2/seqan/seeds/banded_chain_align.h \
SeqAn-1.2/seqan/seeds/banded_chain_align_affine.h \
SeqAn-1.2/seqan/seeds/global_seed_chain.h \
SeqAn-1.2/seqan/seeds/memoryManager_base.h \
SeqAn-1.2/seqan/seeds/memoryManager_int.h \
SeqAn-1.2/seqan/seeds/propertyMap.h \
SeqAn-1.2/seqan/seeds/seed_base.h \
SeqAn-1.2/seqan/seeds/seed_multi.h \
SeqAn-1.2/seqan/seeds/seedHandlingTags.h \
SeqAn-1.2/seqan/seeds/seeds_generated_forwards.h \
SeqAn-1.2/seqan/seeds/seedSet_base.h \
SeqAn-1.2/seqan/seeds/seedSet_iterator.h \
SeqAn-1.2/seqan/seeds/seedSet_score.h \
SeqAn-1.2/seqan/seeds.h \
SeqAn-1.2/seqan/sequence/adapt_std_list.h \
SeqAn-1.2/seqan/sequence/lexical.h \
SeqAn-1.2/seqan/sequence/segment_base.h \
SeqAn-1.2/seqan/sequence/segment_infix.h \
SeqAn-1.2/seqan/sequence/segment_prefix.h \
SeqAn-1.2/seqan/sequence/segment_suffix.h \
SeqAn-1.2/seqan/sequence/sequence_forwards.h \
SeqAn-1.2/seqan/sequence/sequence_generated_forwards.h \
SeqAn-1.2/seqan/sequence/sequence_interface.h \
SeqAn-1.2/seqan/sequence/sequence_multiple.h \
SeqAn-1.2/seqan/sequence/sequence_shortcuts.h \
SeqAn-1.2/seqan/sequence/std_string.h \
SeqAn-1.2/seqan/sequence/string_alloc.h \
SeqAn-1.2/seqan/sequence/string_array.h \
SeqAn-1.2/seqan/sequence/string_base.h \
SeqAn-1.2/seqan/sequence/string_cstyle.h \
SeqAn-1.2/seqan/sequence/string_packed.h \
SeqAn-1.2/seqan/sequence/string_pointer.h \
SeqAn-1.2/seqan/sequence/string_stack.h \
SeqAn-1.2/seqan/sequence/string_value_expand.h \
SeqAn-1.2/seqan/sequence.h \
SeqAn-1.2/seqan/sequence_journal/iterator_journal.h \
SeqAn-1.2/seqan/sequence_journal/journal.h \
SeqAn-1.2/seqan/sequence_journal/sequence_journal_generated_forwards.h \
SeqAn-1.2/seqan/sequence_journal/string_journal.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_base.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_debug.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_forwards.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_interface.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_node.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_operation.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_test_foundry.h \
SeqAn-1.2/seqan/sequence_journal/string_journal_utility.h \
SeqAn-1.2/seqan/statistical_index/statistical_index_generated_forwards.h \
SeqAn-1.2/seqan/statistical_index/statistical_index_markov_model.h \
SeqAn-1.2/seqan/statistical_index/statistical_index_statistics.h \
SeqAn-1.2/seqan/statistical_index.h \
SeqAn-1.2/seqan/store/store_align.h \
SeqAn-1.2/seqan/store/store_all.h \
SeqAn-1.2/seqan/store/store_annotation.h \
SeqAn-1.2/seqan/store/store_base.h \
SeqAn-1.2/seqan/store/store_contig.h \
SeqAn-1.2/seqan/store/store_generated_forwards.h \
SeqAn-1.2/seqan/store/store_io.h \
SeqAn-1.2/seqan/store/store_io_sam.h \
SeqAn-1.2/seqan/store/store_io_sam_out.h \
SeqAn-1.2/seqan/store/store_library.h \
SeqAn-1.2/seqan/store/store_matepair.h \
SeqAn-1.2/seqan/store/store_read.h \
SeqAn-1.2/seqan/store.h \
SeqAn-1.2/seqan/system/file_async.h \
SeqAn-1.2/seqan/system/file_directory.h \
SeqAn-1.2/seqan/system/file_manual_forwards.h \
SeqAn-1.2/seqan/system/file_sync.h \
SeqAn-1.2/seqan/system/system_base.h \
SeqAn-1.2/seqan/system/system_event.h \
SeqAn-1.2/seqan/system/system_generated_forwards.h \
SeqAn-1.2/seqan/system/system_manual_forwards.h \
SeqAn-1.2/seqan/system/system_mutex.h \
SeqAn-1.2/seqan/system/system_sema.h \
SeqAn-1.2/seqan/system/system_thread.h \
SeqAn-1.2/seqan/system.h 

#-- progs to be installed in $prefix/bin
bin_PROGRAMS = \
	prep_reads \
	tophat_reports \
	juncs_db \
	gtf_juncs \
	extract_reads \
	segment_juncs \
	closure_juncs \
	long_spanning_reads \
	fix_map_ordering \
	bam_merge \
	bam2fastx \
	library_stats \
	mask_sam \
	wiggles \
	sam_juncs


#-- scripts to be installed in $prefix/bin
dist_bin_SCRIPTS = \
	contig_to_chr_coords \
	tophat \
	bed_to_juncs \
	sra_to_solid

#SUFFIXES = .py
#.py:
#	(echo '#!$(PYTHON)'; sed '/^#!/d' $<) > $@


#-- tophat library for linking convienence
noinst_LIBRARIES = libtophat.a libgc.a

noinst_HEADERS = \
	reads.h \
	codons.h \
	common.h \
	GBase.h \
	gdna.h \
	GFaSeqGet.h \
	gff.h \
	GHash.hh \
	GList.hh \
	GStr.h \
	bwt_map.h \
	wiggles.h \
	junctions.h \
	assert_helpers.h \
	insertions.h \
	deletions.h \
	align_status.h \
	alphabet.h \
	timer.h \
	closures.h \
	tokenize.h \
	fragments.h \
	inserts.h \
	segments.h \
	qual.h


libtophat_a_SOURCES = \
	reads.cpp \
	alphabet.c \
	bwt_map.cpp \
	common.cpp \
	junctions.cpp \
	insertions.cpp \
	deletions.cpp \
	align_status.cpp \
	fragments.cpp \
	tokenize.cpp \
	inserts.cpp \
	qual.cpp
    
libgc_a_SOURCES = \
	GBase.cpp \
	codons.cpp \
	gdna.cpp \
	GStr.cpp \
	GFaSeqGet.cpp \
	gff.cpp

#-- program sources

prep_reads_SOURCES = prep_reads.cpp
prep_reads_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
prep_reads_LDFLAGS = $(BAM_LDFLAGS)

segment_juncs_SOURCES = segment_juncs.cpp
segment_juncs_LDADD = $(top_builddir)/src/libtophat.a  $(BAM_LIB)
segment_juncs_LDFLAGS = $(BAM_LDFLAGS)

long_spanning_reads_SOURCES = long_spanning_reads.cpp
long_spanning_reads_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
long_spanning_reads_LDFLAGS = $(BAM_LDFLAGS)

gtf_juncs_SOURCES = gtf_juncs.cpp
gtf_juncs_LDADD = $(top_builddir)/src/libtophat.a libgc.a $(BAM_LIB)
gtf_juncs_LDFLAGS = $(BAM_LDFLAGS)

juncs_db_SOURCES = juncs_db.cpp
juncs_db_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
juncs_db_LDFLAGS = $(BAM_LDFLAGS)

library_stats_SOURCES = library_stats.cpp
library_stats_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
library_stats_LDFLAGS = $(BAM_LDFLAGS)

tophat_reports_SOURCES = tophat_reports.cpp
tophat_reports_LDADD = $(top_builddir)/src/libtophat.a  $(BAM_LIB)
tophat_reports_LDFLAGS = $(BAM_LDFLAGS)

extract_reads_SOURCES = extract_reads.cpp
extract_reads_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
extract_reads_LDFLAGS = $(BAM_LDFLAGS)

fix_map_ordering_SOURCES = fix_map_ordering.cpp
fix_map_ordering_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
fix_map_ordering_LDFLAGS = $(BAM_LDFLAGS)

bam2fastx_SOURCES = bam2fastx.cpp
bam2fastx_LDADD = $(top_builddir)/src/libgc.a $(BAM_LIB)
bam2fastx_LDFLAGS = $(BAM_LDFLAGS)

bam_merge_SOURCES = bam_merge.cpp
bam_merge_LDADD = $(top_builddir)/src/libgc.a $(BAM_LIB)
bam_merge_LDFLAGS = $(BAM_LDFLAGS)

closure_juncs_SOURCES = closures.cpp
closure_juncs_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
closure_juncs_LDFLAGS = $(BAM_LDFLAGS)

mask_sam_SOURCES = mask_sam.cpp
mask_sam_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
mask_sam_LDFLAGS = $(BAM_LDFLAGS)

wiggles_SOURCES = wiggles.cpp
wiggles_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
wiggles_LDFLAGS = $(BAM_LDFLAGS)

sam_juncs_SOURCES = sam_juncs.cpp
sam_juncs_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
sam_juncs_LDFLAGS = $(BAM_LDFLAGS)
