#include $(top_srcdir)/build-aux/tophat.mk

#SUBDIRS = samtools

#AM_CXXFLAGS = -I$(top_srcdir)/src/SeqAn-1.3

# Generated with 
# find SeqAn-1.3 -type f -print | grep -v ".svn" | sed 's/$/ \\/g'
# run from src
EXTRA_DIST = \
SeqAn-1.3/README \
SeqAn-1.3/seqan/chaining/chain_generic.h \
SeqAn-1.3/seqan/chaining/rt_skip_base_element.h \
SeqAn-1.3/seqan/chaining/score_zero.h \
SeqAn-1.3/seqan/chaining/geom_distribution.h \
SeqAn-1.3/seqan/chaining/chain_base.h \
SeqAn-1.3/seqan/chaining/chaining_generated_forwards.h \
SeqAn-1.3/seqan/chaining/rmt_skip_base_element.h \
SeqAn-1.3/seqan/chaining/skip_element.h \
SeqAn-1.3/seqan/chaining/rmt_skip_element.h \
SeqAn-1.3/seqan/chaining/rt_sl_impl.h \
SeqAn-1.3/seqan/chaining/chain_wrapper_point.h \
SeqAn-1.3/seqan/chaining/rmt_compl_algos.h \
SeqAn-1.3/seqan/chaining/rmt_base.h \
SeqAn-1.3/seqan/chaining/skip_list.h \
SeqAn-1.3/seqan/chaining/skip_list_iterator.h \
SeqAn-1.3/seqan/chaining/skip_base_element.h \
SeqAn-1.3/seqan/chaining/fragment.h \
SeqAn-1.3/seqan/chaining/skip_pool_alloc.h \
SeqAn-1.3/seqan/chaining/skip_list_impl.h \
SeqAn-1.3/seqan/chaining/rt_skip_element.h \
SeqAn-1.3/seqan/chaining/tree_chain_sop.h \
SeqAn-1.3/seqan/chaining/rmt_common_algos.h \
SeqAn-1.3/seqan/chaining/score_manhattan.h \
SeqAn-1.3/seqan/chaining/score_chain_sop.h \
SeqAn-1.3/seqan/chaining/rt_impl.h \
SeqAn-1.3/seqan/chaining/tree_chain.h \
SeqAn-1.3/seqan/chaining/tree_chain_utils.h \
SeqAn-1.3/seqan/chaining/skip_list_base.h \
SeqAn-1.3/seqan/chaining/rt_sl_def_algos.h \
SeqAn-1.3/seqan/chaining/range_tree.h \
SeqAn-1.3/seqan/chaining/rmt_def_algos.h \
SeqAn-1.3/seqan/chaining/chain_point.h \
SeqAn-1.3/seqan/chaining/rt_base.h \
SeqAn-1.3/seqan/chaining/chain_meta_fragment.h \
SeqAn-1.3/seqan/chaining/score_chain.h \
SeqAn-1.3/seqan/chaining/rt_common_algos.h \
SeqAn-1.3/seqan/chaining/skip_list_dynamic.h \
SeqAn-1.3/seqan/chaining/rt_sl_base.h \
SeqAn-1.3/seqan/chaining/skip_list_type.h \
SeqAn-1.3/seqan/chaining/range_max_tree.h \
SeqAn-1.3/seqan/chaining/rt_sl_compl_algos.h \
SeqAn-1.3/seqan/file/file_format_cgviz.h \
SeqAn-1.3/seqan/file/stream.h \
SeqAn-1.3/seqan/file/file_format_embl.h \
SeqAn-1.3/seqan/file/file_format_fasta.h \
SeqAn-1.3/seqan/file/string_mmap.h \
SeqAn-1.3/seqan/file/file_format_raw.h \
SeqAn-1.3/seqan/file/string_external.h \
SeqAn-1.3/seqan/file/file_filereader.h \
SeqAn-1.3/seqan/file/file_cstyle.h \
SeqAn-1.3/seqan/file/file_page_raid0.h \
SeqAn-1.3/seqan/file/cstream.h \
SeqAn-1.3/seqan/file/file_format_guess.h \
SeqAn-1.3/seqan/file/file_base.h \
SeqAn-1.3/seqan/file/file_format_mmap.h \
SeqAn-1.3/seqan/file/file_forwards.h \
SeqAn-1.3/seqan/file/file_array.h \
SeqAn-1.3/seqan/file/meta.h \
SeqAn-1.3/seqan/file/stream_algorithms.h \
SeqAn-1.3/seqan/file/file_format.h \
SeqAn-1.3/seqan/file/file_filereaderiterator.h \
SeqAn-1.3/seqan/file/file_format_genbank.h \
SeqAn-1.3/seqan/file/file_generated_forwards.h \
SeqAn-1.3/seqan/file/file_format_fasta_align.h \
SeqAn-1.3/seqan/file/chunk_collector.h \
SeqAn-1.3/seqan/file/file_page.h \
SeqAn-1.3/seqan/seeds.h \
SeqAn-1.3/seqan/find_motif.h \
SeqAn-1.3/seqan/LICENSE \
SeqAn-1.3/seqan/find2/find_approx_find_begin.h \
SeqAn-1.3/seqan/find2/find_finder_default.h \
SeqAn-1.3/seqan/find2/find_exact_simple.h \
SeqAn-1.3/seqan/find2/find_multiple_exact_simple.h \
SeqAn-1.3/seqan/find2/find_hamming_simple.h \
SeqAn-1.3/seqan/find2/find_pattern_wild_shiftand.h \
SeqAn-1.3/seqan/find2/find_approx_dpsearch.h \
SeqAn-1.3/seqan/find2/find_exact_shiftand.h \
SeqAn-1.3/seqan/find2/find2_generated_forwards.h \
SeqAn-1.3/seqan/find2/find_base.h \
SeqAn-1.3/seqan/platform.h \
SeqAn-1.3/seqan/sequence_journaled.h \
SeqAn-1.3/seqan/chaining.h \
SeqAn-1.3/seqan/score/score_generated_forwards.h \
SeqAn-1.3/seqan/score/score_matrix_data.h \
SeqAn-1.3/seqan/score/score_matrix.h \
SeqAn-1.3/seqan/score/score_simple.h \
SeqAn-1.3/seqan/score/score_base.h \
SeqAn-1.3/seqan/score/score_edit.h \
SeqAn-1.3/seqan/graph_algorithms.h \
SeqAn-1.3/seqan/sequence_journaled/sequence_journaled.h \
SeqAn-1.3/seqan/sequence_journaled/journal_entries_unbalanced_tree_iterator.h \
SeqAn-1.3/seqan/sequence_journaled/sequence_journaled_forwards.h \
SeqAn-1.3/seqan/sequence_journaled/journal_entries_unbalanced_tree_node.h \
SeqAn-1.3/seqan/sequence_journaled/sequence_journaled_iterator.h \
SeqAn-1.3/seqan/sequeqgram_openaddressing.h \
SeqAn-1.3/seqan/index/equence/sequence_shortcuts.h \
SeqAn-1.3/seqan/sequence/adapt_std_list

#-- progs to be installed in $prefix/bin
bin_PROGRAMS = \
	prep_reads \
	gtf_to_fasta \
	fix_map_ordering \
	bam2fastx \
	segment_juncs \
	closure_juncs \
	gtf_juncs \
	juncs_db \
	long_spanning_reads \
	bam_merge \
	map2gtf \
	tophat_reports \
	sam_juncs

#-- scripts to be installed in $prefix/bin
dist_bin_SCRIPTS = \
	contig_to_chr_coords \
	tophat \
	bed_to_juncs \
	sra_to_solid \
	tophat-fusion-post

#SUFFIXES = .py
#.py:
#	(echo '#!$(PYTHON)'; sed '/^#!/d' $<) > $@


#-- tophat library for linking convienence
noinst_LIBRARIES = libtophat.a libgc.a

noinst_HEADERS = \
	reads.h \
	codons.h \
	common.h \
	GBase.h \
	gdna.h \
	GFaSeqGet.h \
	gff.h \
	GHash.hh \
	GList.hh \
	GStr.h \
	FastaTools.h \
	GTFToFasta.h \
	map2gtf.h \
	bwt_map.h \
	junctions.h \
	assert_helpers.h \
	insertions.h \
	wiggles.h \
	deletions.h \
	fusions.h \
	align_status.h \
	alphabet.h \
	timer.h \
	closures.h \
	tokenize.h \
	fragments.h \
	inserts.h \
	segments.h \
	qual.h \
	utils.h \
	coverage.h


libtophat_a_SOURCES = \
	reads.cpp \
	alphabet.c \
	bwt_map.cpp \
	common.cpp \
	junctions.cpp \
	insertions.cpp \
	deletions.cpp \
	fusions.cpp \
	align_status.cpp \
	fragments.cpp \
	tokenize.cpp \
	inserts.cpp \
	qual.cpp \
	utils.cpp \
	coverage.cpp
    
libgc_a_SOURCES = \
	GBase.cpp \
	codons.cpp \
	gdna.cpp \
	GStr.cpp \
	GFaSeqGet.cpp \
	gff.cpp

#-- program sources

prep_reads_SOURCES = prep_reads.cpp
prep_reads_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
prep_reads_LDFLAGS = $(BAM_LDFLAGS)

segment_juncs_SOURCES = segment_juncs.cpp
segment_juncs_LDADD = $(top_builddir)/src/libtophat.a $(BOOST_THREAD_LIB) $(BAM_LIB)
segment_juncs_LDFLAGS = $(BOOST_LDFLAGS) $(BAM_LDFLAGS)

long_spanning_reads_SOURCES = long_spanning_reads.cpp
long_spanning_reads_LDADD = $(top_builddir)/src/libtophat.a $(BOOST_THREAD_LIB) $(BAM_LIB)
long_spanning_reads_LDFLAGS = $(BOOST_LDFLAGS) $(BAM_LDFLAGS)

gtf_juncs_SOURCES = gtf_juncs.cpp
gtf_juncs_LDADD = $(top_builddir)/src/libtophat.a libgc.a $(BAM_LIB)
gtf_juncs_LDFLAGS = $(BAM_LDFLAGS)

juncs_db_SOURCES = juncs_db.cpp
juncs_db_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
juncs_db_LDFLAGS = $(BAM_LDFLAGS)

tophat_reports_SOURCES = tophat_reports.cpp
tophat_reports_LDADD = $(top_builddir)/src/libtophat.a  $(BOOST_THREAD_LIB) $(BAM_LIB)
tophat_reports_LDFLAGS = $(BOOST_LDFLAGS) $(BAM_LDFLAGS)

fix_map_ordering_SOURCES = fix_map_ordering.cpp
fix_map_ordering_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
fix_map_ordering_LDFLAGS = $(BAM_LDFLAGS)

bam2fastx_SOURCES = bam2fastx.cpp
bam2fastx_LDADD = $(top_builddir)/src/libgc.a $(BAM_LIB)
bam2fastx_LDFLAGS = $(BAM_LDFLAGS)

bam_merge_SOURCES = bam_merge.cpp
bam_merge_LDADD = $(top_builddir)/src/libtophat.a $(top_builddir)/src/libgc.a $(BAM_LIB)
bam_merge_LDFLAGS = $(BAM_LDFLAGS)

closure_juncs_SOURCES = closures.cpp
closure_juncs_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
closure_juncs_LDFLAGS = $(BAM_LDFLAGS)

sam_juncs_SOURCES = sam_juncs.cpp
sam_juncs_LDADD = $(top_builddir)/src/libtophat.a $(BAM_LIB)
sam_juncs_LDFLAGS = $(BAM_LDFLAGS)

map2gtf_SOURCES = map2gtf.cpp
map2gtf_LDADD = $(top_builddir)/src/libtophat.a libgc.a $(BAM_LIB)
map2gtf_LDFLAGS = $(BAM_LDFLAGS)

gtf_to_fasta_SOURCES = GTFToFasta.cpp FastaTools.cpp
gtf_to_fasta_LDADD = $(top_builddir)/src/libtophat.a libgc.a $(BAM_LIB)
gtf_to_fasta_LDFLAGS = $(BAM_LDFLAGS)
